--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -3,8 +3,9 @@
     "version": "1.0.0",
     "main": "index.js",
     "dependencies": {
-      "body-parser": "^1.19.0",
-      "express": "^4.17.1",
-      "mysql2": "^2.3.0"
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mysql2": "^2.3.0",
+        "server": "file:"
     }
-  }
+}
