--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -12,7 +12,8 @@
     "app": "file:",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
